// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`applySchemaMigrationsToFields deleteField > nested component 1`] = `
{
  "component": null,
  "componentList": null,
  "richText": {
    "root": {
      "children": [
        {
          "children": [
            {
              "detail": 0,
              "format": 0,
              "mode": "normal",
              "style": "",
              "text": "Heading 1",
              "type": "text",
              "version": 1,
            },
          ],
          "direction": "ltr",
          "format": "",
          "indent": 0,
          "tag": "h1",
          "type": "heading",
          "version": 1,
        },
        {
          "data": {
            "child": {
              "child": null,
              "type": "Component",
            },
            "type": "Component",
          },
          "format": "",
          "type": "component",
          "version": 1,
        },
      ],
      "direction": "ltr",
      "format": "",
      "indent": 0,
      "type": "root",
      "version": 1,
    },
  },
}
`;

exports[`applySchemaMigrationsToFields deleteType > component in rich text 1`] = `
{
  "component": null,
  "componentList": null,
  "richText": {
    "root": {
      "children": [
        {
          "children": [
            {
              "detail": 0,
              "format": 0,
              "mode": "normal",
              "style": "",
              "text": "Heading 1",
              "type": "text",
              "version": 1,
            },
          ],
          "direction": "ltr",
          "format": "",
          "indent": 0,
          "tag": "h1",
          "type": "heading",
          "version": 1,
        },
      ],
      "direction": "ltr",
      "format": "",
      "indent": 0,
      "type": "root",
      "version": 1,
    },
  },
}
`;

exports[`applySchemaMigrationsToFields deleteType > component list 1`] = `
{
  "component": null,
  "componentList": null,
  "richText": null,
}
`;

exports[`applySchemaMigrationsToFields deleteType > nested component 1`] = `
{
  "component": null,
  "componentList": null,
  "richText": null,
}
`;

exports[`applySchemaMigrationsToFields renameField > component in rich text 1`] = `
{
  "component": null,
  "componentList": null,
  "richText": {
    "root": {
      "children": [
        {
          "children": [
            {
              "detail": 0,
              "format": 0,
              "mode": "normal",
              "style": "",
              "text": "Heading 1",
              "type": "text",
              "version": 1,
            },
          ],
          "direction": "ltr",
          "format": "",
          "indent": 0,
          "tag": "h1",
          "type": "heading",
          "version": 1,
        },
        {
          "data": {
            "child2": {
              "child2": null,
              "string2": "1.1",
              "type": "Component",
            },
            "string2": "1",
            "type": "Component",
          },
          "format": "",
          "type": "component",
          "version": 1,
        },
      ],
      "direction": "ltr",
      "format": "",
      "indent": 0,
      "type": "root",
      "version": 1,
    },
  },
}
`;

exports[`applySchemaMigrationsToFields renameType > component in rich text 1`] = `
{
  "component": null,
  "componentList": null,
  "richText": {
    "root": {
      "children": [
        {
          "children": [
            {
              "detail": 0,
              "format": 0,
              "mode": "normal",
              "style": "",
              "text": "Heading 1",
              "type": "text",
              "version": 1,
            },
          ],
          "direction": "ltr",
          "format": "",
          "indent": 0,
          "tag": "h1",
          "type": "heading",
          "version": 1,
        },
        {
          "data": {
            "child": {
              "child": null,
              "string": "1.1",
              "type": "Component2",
            },
            "string": "1",
            "type": "Component2",
          },
          "format": "",
          "type": "component",
          "version": 1,
        },
      ],
      "direction": "ltr",
      "format": "",
      "indent": 0,
      "type": "root",
      "version": 1,
    },
  },
}
`;
